<resources>
    <string name="app_name">Conversor de Medidas</string>
    <string name="escolha_o_tipo_de_medida">Escolha o tipo de medida</string>
    <string name="insira">Insira</string>
    <string name="resultado">Resultado</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="button">Button</string>
    <string name="equals">=</string>
    <string name="left_unit">Left unit</string>
    <string name="right_unit">Right unit</string>
    <string name="em">em</string>
    <string name="conversor_de_medidas">Conversor de Medidas</string>
    <string name="title_activity_moeda">MoedaActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="cota_o_do_d_lar_real_e_euro_ao_vivo_fastforex_io">Cotação do dólar, real e euro: AO VIVO (fastFOREX.io)</string>
    <string name="p_s_polegadas_sistema_de_medi_o_imperial">Pés, Polegadas: Sistema de medição Imperial</string>
</resources>