<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent" android:background="@color/blue" android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:src="@drawable/world"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/conversor_de_medidas"
        android:textColor="#fff"
        android:textSize="30sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="32dp"
        android:text="@string/p_s_polegadas_sistema_de_medi_o_imperial"
        android:textColor="#fff"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="32dp"
        android:text="@string/cota_o_do_d_lar_real_e_euro_ao_vivo_fastforex_io"
        android:textColor="#fff"
        android:textSize="14sp" />

</LinearLayout>
